<resources>
    <string name="app_name">ACWIR</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="rX">X Axis : NULL</string>
    <string name="rY">Y Axis : NULL</string>
    <string name="rZ">Z Axis : NULL</string>
    <string name="rControlText">Accelerometer Status:</string>

    <string name="rDirectionText">"Command in Transmission : NULL"</string>
    <string name="title_activity_bt_list">BtList</string>
    <string name="title_activity_acc">BtList</string>
    <string name="rChooseDevice">Choose Blutooth Device:</string>

    <string name="server_mode_string">Server Mode</string>
    <string name="client_mode_string">Client Mode</string>
    <string name="title_activity_about">About</string>
    <string name="rtextWindow">Connection Status : NULL</string>

</resources>
